creditas-sf/force-app/main/default/objects/Quote/fields/AdditionalCosts__c.field-meta.xml
<CustomField>
    <fullName>AdditionalCosts__c</fullName>
    <label>Despesa de registro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>