creditas-sf/force-app/main/default/objects/Quote/fields/Banker__c.field-meta.xml
<CustomField>
    <fullName>Banker__c</fullName>
    <label>Banker</label>
    <length>100</length>
    <type>Text</type>
</CustomField>