creditas-sf/force-app/main/default/objects/Quote/fields/CollateralAmount__c.field-meta.xml
<CustomField>
    <fullName>CollateralAmount__c</fullName>
    <label>CollateralAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>