creditas-sf/force-app/main/default/objects/Quote/fields/ContractDate__c.field-meta.xml
<CustomField>
    <fullName>ContractDate__c</fullName>
    <label>ContractDate</label>
    <type>Date</type>
</CustomField>