creditas-sf/force-app/main/default/objects/Quote/fields/CreditScore__c.field-meta.xml
<CustomField>
    <fullName>CreditScore__c</fullName>
    <label>CreditScore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>