creditas-sf/force-app/main/default/objects/Quote/fields/DailyCet__c.field-meta.xml
<CustomField>
    <fullName>DailyCet__c</fullName>
    <label>Taxa Diaria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>