creditas-sf/force-app/main/default/objects/Quote/fields/ExternalOpportunityId__c.field-meta.xml
<CustomField>
    <fullName>ExternalOpportunityId__c</fullName>
    <label>ExternalOpportunityId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>