creditas-sf/force-app/main/default/objects/Quote/fields/ExternalOpportunityVersion__c.field-meta.xml
<CustomField>
    <fullName>ExternalOpportunityVersion__c</fullName>
    <label>ExternalOpportunityVersion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>