creditas-sf/force-app/main/default/objects/Quote/fields/GracePeriod__c.field-meta.xml
<CustomField>
    <fullName>GracePeriod__c</fullName>
    <label>GracePeriod</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>