creditas-sf/force-app/main/default/objects/Quote/fields/LimitCetMaximum__c.field-meta.xml
<CustomField>
    <fullName>LimitCetMaximum__c</fullName>
    <label>Máximo</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>