creditas-sf/force-app/main/default/objects/Quote/fields/LimitCetMinimunc__c.field-meta.xml
<CustomField>
    <fullName>LimitCetMinimunc__c</fullName>
    <label>LimitCetMinimunc</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>