creditas-sf/force-app/main/default/objects/Quote/fields/LimitDueDate__c.field-meta.xml
<CustomField>
    <fullName>LimitDueDate__c</fullName>
    <label>Data de Vencimento</label>
    <type>Date</type>
</CustomField>