creditas-sf/force-app/main/default/objects/Quote/fields/LimitInstallmentType__c.field-meta.xml
<CustomField>
    <fullName>LimitInstallmentType__c</fullName>
    <label>LimitInstallmentType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FIXED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>