creditas-sf/force-app/main/default/objects/Quote/fields/LimitInterest__c.field-meta.xml
<CustomField>
    <fullName>LimitInterest__c</fullName>
    <label>LimitInterest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>