creditas-sf/force-app/main/default/objects/Quote/fields/LimitTotal__c.field-meta.xml
<CustomField>
    <fullName>LimitTotal__c</fullName>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>