creditas-sf/force-app/main/default/objects/Quote/fields/MonthlyCet__c.field-meta.xml
<CustomField>
    <fullName>MonthlyCet__c</fullName>
    <label>MonthlyCet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>