creditas-sf/force-app/main/default/objects/Quote/fields/MonthlyInterest__c.field-meta.xml
<CustomField>
    <fullName>MonthlyInterest__c</fullName>
    <label>MonthlyInterest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>