creditas-sf/force-app/main/default/objects/Quote/fields/MonthlyIntRateCompType__c.field-meta.xml
<CustomField>
    <fullName>MonthlyIntRateCompType__c</fullName>
    <label>Tipo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>