creditas-sf/force-app/main/default/objects/Quote/fields/MonthlyIntRateCompValue__c.field-meta.xml
<CustomField>
    <fullName>MonthlyIntRateCompValue__c</fullName>
    <label>Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>