creditas-sf/force-app/main/default/objects/Quote/fields/monthlyLimitMaximum__c.field-meta.xml
<CustomField>
    <fullName>monthlyLimitMaximum__c</fullName>
    <label>Máximo Mensal</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>