creditas-sf/force-app/main/default/objects/Quote/fields/monthlyLimitMinimunc__c.field-meta.xml
<CustomField>
    <fullName>monthlyLimitMinimunc__c</fullName>
    <label>monthlyLimitMinimunc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>