creditas-sf/force-app/main/default/objects/Quote/fields/NetValue__c.field-meta.xml
<CustomField>
    <fullName>NetValue__c</fullName>
    <label>NetValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>