creditas-sf/force-app/main/default/objects/Quote/fields/ParameterAdditionalCosts__c.field-meta.xml
<CustomField>
    <fullName>ParameterAdditionalCosts__c</fullName>
    <label>ParameterAdditionalCosts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>