creditas-sf/force-app/main/default/objects/Quote/fields/ParameterCalcVersion__c.field-meta.xml
<CustomField>
    <fullName>ParameterCalcVersion__c</fullName>
    <label>ParameterCalcVersion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>