creditas-sf/force-app/main/default/objects/Quote/fields/ParameterIOF__c.field-meta.xml
<CustomField>
    <fullName>ParameterIOF__c</fullName>
    <label>ParameterIOF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>