creditas-sf/force-app/main/default/objects/Quote/fields/ParameterTac__c.field-meta.xml
<CustomField>
    <fullName>ParameterTac__c</fullName>
    <label>Valor TC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>