creditas-sf/force-app/main/default/objects/Quote/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>ProductType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>