creditas-sf/force-app/main/default/objects/Quote/fields/ServiceDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceDate__c</fullName>
    <label>Primeiro Vencimento</label>
    <type>Date</type>
</CustomField>