creditas-sf/force-app/main/default/objects/Quote/fields/ServiceLastDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceLastDate__c</fullName>
    <label>Último Vencimento</label>
    <type>Date</type>
</CustomField>