creditas-sf/force-app/main/default/objects/Quote/fields/UF__c.field-meta.xml
<CustomField>
    <fullName>UF__c</fullName>
    <label>UF</label>
    <length>100</length>
    <type>Text</type>
</CustomField>