creditas-sf/force-app/main/default/objects/Quote/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Valor das Parcelas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>