creditas-sf/force-app/main/default/objects/Quote/fields/YearlyCet__c.field-meta.xml
<CustomField>
    <fullName>YearlyCet__c</fullName>
    <label>Taxa Anual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>