creditas-sf/force-app/main/default/objects/Quote/fields/YearlyInterest__c.field-meta.xml
<CustomField>
    <fullName>YearlyInterest__c</fullName>
    <label>YearlyInterest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>