creditas-sf/force-app/main/default/objects/Quote/fields/yearlyLimitMaximum__c.field-meta.xml
<CustomField>
    <fullName>yearlyLimitMaximum__c</fullName>
    <label>yearlyLimitMaximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>