creditas-sf/force-app/main/default/objects/Quote/fields/yearlyLimitMinimunc__c.field-meta.xml
<CustomField>
    <fullName>yearlyLimitMinimunc__c</fullName>
    <label>yearlyLimitMinimunc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>